@@ -5,20 +5,23 @@ use Getopt::Long;
 use Pod::Usage;
 use Catalyst::Helper;
 
-my $help  = 0;
-my $nonew = 0;
-my $short = 0;
+my $help    = 0;
+my $nonew   = 0;
+my $scripts = 0;
+my $short   = 0;
 
 GetOptions(
-    'help|?' => \$help,
-    'nonew'  => \$nonew,
-    'short'  => \$short
+    'help|?'  => \$help,
+    'nonew'   => \$nonew,
+    'scripts' => \$scripts,
+    'short'   => \$short
 );
 
 pod2usage(1) if ( $help || !$ARGV[0] );
 
 my $helper =
-  Catalyst::Helper->new( { '.newfiles' => !$nonew, 'short' => $short } );
+  Catalyst::Helper->new(
+    { '.newfiles' => !$nonew, 'scripts' => $scripts, 'short' => $short } );
 pod2usage(1) unless $helper->mk_app( $ARGV[0] );
 
 1;
@@ -33,9 +36,10 @@ catalyst - Bootstrap a Catalyst application
 catalyst.pl [options] application-name
 
  Options:
-   -help     display this help and exits
-   -nonew    don't create a .new file where a file to be created exists
-   -short    use short types, like C instead of Controller...
+   -help       display this help and exits
+   -nonew      don't create a .new file where a file to be created exists
+   -scripts    update helper scripts only
+   -short      use short types, like C instead of Controller...
 
  application-name must be a valid Perl module name and can include "::"
 
